--- a/src/com/mtg/resources/deckbuilder/deckbuilderview.fxml
+++ b/src/com/mtg/resources/deckbuilder/deckbuilderview.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<VBox prefHeight="600.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
+<VBox prefHeight="600.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="com.mtg.main.controller.DeckBuilder">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
